--- a/.github/workflows/heroku-deploy.yml
+++ b/.github/workflows/heroku-deploy.yml
@@ -1,10 +1,18 @@
+name: Deploy
+
+on:
+  push:
+    branches:
+      - Assignment5
+
 jobs:
-  heroku-deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
-        uses: actions/checkout@v2
-        uses: akhileshns/heroku-deploy@v3.12.12
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: f9346783-09ef-46fd-bbd7-88341f396b01
           heroku_app_name: cpsc455assignment
           heroku_email: truman_zhen@hotmail.com
+          buildpack: "https://github.com/HashNuke/heroku-buildpack-elixir.git"
